Add redshift measurements/speed calculation
This commit introduces a new feature, which is detection of
redshift and automatic computation of associated speeds.